tests/errors/preprocessor/038_nonexisting_files.c
#include "nonexisting.h"
#include "nonexisting2.h"